--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,8 @@
     max-width: 1920px;
     width: 100%;
     height: 100vh;
-    background-image: radial-gradient(rgba(0, 0, 0, 0), rgba(0,0,0,.7)), url(../../img/images/bg.jpg);
+    background-image: radial-gradient(rgba(0, 0, 0, 0), rgba(0,0,0,.7)), url(../../img/images/bg2.jpg);
+    background-size: cover;
 }
 
 .header-container::after {
@@ -40,11 +41,11 @@
 .signIn-btn,
 .signIn-btn:active,
 .signIn-btn:visited{
-    background-color: #e50914;
+    background-color: var(--btn-color);
     line-height: normal;
     padding: 7px 17px;
     font-weight: 400;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     color: var(--color-white);
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
