--- a/src/components/Tabs/TabComponent.css
+++ b/src/components/Tabs/TabComponent.css
@@ -15,6 +15,7 @@ ul.tab-nav-container li {
     color: var(--main-grey);
     font-size: 1.4rem;
     padding: 2rem;
+    cursor: pointer;
 }
 
 ul.tab-nav-container li:first-child {
@@ -42,31 +43,5 @@ ul.tab-nav-container li:hover svg path {
     fill: var(--color-white);
 }
 
-/* COntents */
-
-.container {
-    background-color: var(--main-deep-dark);
-}
-
-.tab-content {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 2rem;
-    margin: 0 12%;
-    padding: 4rem 0;
-    justify-content: center;
-    align-items: center;
-}
-
-.tab-content h2 {
-    font-size: 2.5rem;
-    line-height: 1.4;
-    font-weight: normal;
-    color: var(--color-text);
-}
-
-.cancelImage {
-    height: 30rem;
-}
-
+/* Contents */
 
