--- a/src/components/Tabs/TabDoors/TabDoors.css
+++ b/src/components/Tabs/TabDoors/TabDoors.css
@@ -4,3 +4,30 @@
     height: 7rem;
     fill: var(--main-grey);
 }
+
+/* Contents */
+.container {
+    background-color: var(--main-deep-dark);
+}
+
+.tab-content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    margin: 0 12%;
+    padding: 4rem 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.tab-content h2 {
+    font-size: 2.5rem;
+    line-height: 1.5;
+    font-weight: normal;
+    color: var(--color-text);
+    margin-bottom: 4rem;
+}
+
+.cancelImage {
+    width: 35.5rem;
+}
